--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^10.6.0",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
