--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.6.0",
+    "html5-qrcode": "^2.3.8",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
