--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.3",
     "firebase": "^10.6.0",
     "html5-qrcode": "^2.3.8",
-    "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
