--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.383.0",
     "next": "^14.2.3",
+    "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
