--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.6.0",
     "html5-qrcode": "^2.3.8",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.383.0",
     "next": "^14.2.3",
     "qr-scanner": "^1.4.2",
