--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
