--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.6.0",
     "html5-qrcode": "^2.3.8",
     "next": "14.0.1",
+    "qr-scanner": "^1.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
