--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "firebase": "^10.6.0",
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.383.0",
     "next": "^14.2.3",
+    "qr-code-styling": "^1.8.4",
     "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
