--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+  "node": "22.x"
+},
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
